# freedump

./: README.md  freedump-cli.py  pyproject.toml  setup.py
freedump/: __init__.py  localmem.py  main.py  remotemem.py
freedump/helper/: logging.py
freedump/memory/: __init__.py  frida.py  local.py
freedump/memory/fridajs/: core.js  default.js  lz4.js
tools/: localmem-cli.py  remotemem-cli.py
